--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,20 +18,16 @@
         </nav>
         <div class="search">
             <form class="search-form" id="search-form">
-                <input class="search-control" type="text" name="query" autocomplete="off"
+                <input class="search-control" type="search" name="query" autocomplete="off"
                     placeholder="Search movies...">
                 <button class="search__btn" type="submit">
                     <img src="" alt="">
                 </button>
             </form>
         </div>
-        <div class="button is-hidden">
+        <div class="buttons is-hidden">
             <button class="btn_watched">Watched</button>
             <button class="btn_queue">Queue</button>
         </div>
-        <div>
-
-        </div>
     </div>
-
 </header>
