fix bulding problem

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
                 </a>
                 <ul class="navigation-menu-list list">
                     <li class="navigation-list-link">
-                        <a class="link navigation-menu-link" href="../index.html">Home</a>
+                        <a class="link navigation-menu-link" href="./index.html">Home</a>
                     </li>
                     <li class="navigation-list-link">
                         <a class="link navigation-menu-link" href="">My library</a>
