--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,24 @@
 
+<footer class="footer-container">
+<div class="container">
+
+<div class="footer-content">
+<div class="footer-rights-information">
+<p class="footer-year"><span class="footer-copyright">©</span> 2020 </p>
+<p class="footer-rights-text">All Rights Reserved</p>
+    
+</div>
+  <div class="footer-about-information">
+        <p>Developed with</p>
+        <!-- <svg class="footer-icon">
+            <use href="./images/heard.svg" width="16px" ></use>
+        </svg> -->
+        <img class="footer-icon" src="./images/heard.png" alt="heart">
+        
+        <p class="">by</p>
+        <a class="link-footer link" href="#">GoIT Students</a>
+        </div>
+  </div>
+   
+</div>
+</footer>
