renamed outer-background on backdrop

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -26,7 +26,7 @@
   --pagination-text-color: #000000;
   --pagination-background-color: #F7F7F7;
 
-  --modal-outer-background-color: #000000;
+  --modal-backdrop-color: #000000;
   --modal-outer-background-opacity: 0.25;
   --modal-main-text-color: #000000;
   --modal-header-text-size: 30px;
