--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,12 +10,8 @@
 </div>
   <div class="footer-about-information">
         <p>Developed with</p>
-        <!-- <svg class="footer-icon">
-            <use href="./images/heard.svg" width="16px" ></use>
-        </svg> -->
-        <img class="footer-icon" src="./images/heard.png" alt="heart">
-        
-        <p class="">by</p>
+        <img class="footer-icon" src="./images/heard.svg" alt="heart"> 
+        <p>by</p>
         <a class="link-footer link" href="#">GoIT Students</a>
         </div>
   </div>
