--- a/src/templates/movieCardTemplate.hbs
+++ b/src/templates/movieCardTemplate.hbs
@@ -1,4 +1,5 @@
-{{!-- <ul class="gallery-list list">
+{{!--<div class="container"
+ <ul class="gallery-list list">
        <li class="gallery-items"></li>
        <li class="gallery-items"></li>
        <li class="gallery-items"></li>
@@ -11,4 +12,6 @@
        <li class="gallery-items"></li>
        <li class="gallery-items"></li>
        <li class="gallery-items"></li>
-</ul>  --}}
+</ul> 
+</div>
+ --}}
