--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -40,7 +40,8 @@
   --modal-btn-queue-border-color: #000000;
   --modal-close-svg-color: #000000;
 
-  --footer-text-size: 16px;
+  --footer-text-size-pc-tablet: 16px;
+  --footer-text-size-mobile: 14px;
   --footer-text-color: #545454;
   --footer-background-color: #F7F7F7;
   --footer-svg-fill: #FF6B08;
