--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -18,6 +18,7 @@ body {
   font-style: normal;
   font-family: var(--text-main);
   color: var(--color-design-main);
+  font-weight: var(--text-bold);
 }
 
 .list {
