--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -5,44 +5,23 @@
   --border-radius: 5px;
   --text-big-letters: uppercase;
   --text-starts-from-big-letter: capitalize;
-  
-  --header-text-underline-color: #FF6B08;
-  --header-text-main-color: #FFFFFF;
+  --main-text-size: 12px;
+  --logo-text-size-and-modal-header: 30px;
+  --underline-color-and-footer-svg-fill-and-card-secondary-text-color: #ff6b08;
+  --main-active-color: #ff6b01;
+  --main-white-color: #ffffff;
+  --background-transparent-color: transparent;
+  --main-black-color: #000000;
+  --for-pagination-footer-votes-background-color: #f7f7f7;
+  --search-and-footer-mobile-text-size: 14px;
+
   --header-logo-svg-fill: #818181;
-  --header-text-logo-text-size: 30px;
-  --header-btn-background-color-active: #FF6B01;
-  --header-btn-background-color-not-active: transparent;
-  --header-text-size: 12px;
-  --header-border-color: #FFFFFF;
-  --header-search-svg-fill-and-underline-color: #FFFFFF;
-  --header-search-unsuccessful-color: #FF001B;
-  --header-search-text-size: 14px;
+  --header-search-unsuccessful-color: #ff001b;
 
-  --card-text-size: 12px;
-  --card-header-color: #000000;
-  --card-secondary-text-color: #FF6B08;
 
-  --pagination-text-size: 12px;
-  --pagination-text-color: #000000;
-  --pagination-background-color: #F7F7F7;
-
-  --modal-backdrop-color: #000000;
-  --modal-outer-background-opacity: 0.25;
-  --modal-main-text-color: #000000;
-  --modal-header-text-size: 30px;
-  --modal-category-and-slash-color: #8C8C8C;
-  --modal-vote-background-color: #FF6B01;
-  --modal-vote-text-color: #FFFFFF;
-  --modal-votes-background-color: #F7F7F7;
-  --modal-text-size: 12px;
-  --modal-btn-watch-background-color: #FF6B01;
-  --modal-btn-queue-background-color: transparent;
-  --modal-btn-queue-border-color: #000000;
-  --modal-close-svg-color: #000000;
+  --modal-backdrop-opacity: 0.25;
+  --modal-category-and-slash-color: #8c8c8c;
 
   --footer-text-size-pc-tablet: 16px;
-  --footer-text-size-mobile: 14px;
   --footer-text-color: #545454;
-  --footer-background-color: #F7F7F7;
-  --footer-svg-fill: #FF6B08;
 }
