--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,5 +35,6 @@
       <button class="btn_queue">Queue</button>
     </div>
   </div>
-  <a class="buttonScrollUp js-buttonScrollUp" title="Up">&#8682;</a>
+
+  <a class="buttonScrollUp js-buttonScrollUp" title="Up">&#8682;</a> // buttonScrollUp
 </header>
