fix styles of backdrop and modal

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -18,8 +18,7 @@
   --header-logo-svg-fill: #818181;
   --header-search-unsuccessful-color: #ff001b;
 
-
-  --modal-backdrop-opacity: 0.25;
+  --modal-backdrop-color: rgba(0, 0, 0, 0.25);
   --modal-category-and-slash-color: #8c8c8c;
 
   --footer-text-size-pc-tablet: 16px;
