--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden">
+<div class="backdrop is-hidden backdrop-js">
     <div class="modal">
         <button type="button" class="modal-close-btn">
             <svg class="modal-close-btn__icon" width="14" height="14">
@@ -6,5 +6,4 @@
             </svg>
         </button>
     </div>
-
 </div>
