--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -9,9 +9,8 @@
   overflow: auto;
 
   padding: 48px 20px 40px 20px;
-  background-color: #ffffff;
-
-  border: 1px solid rgba(0, 0, 0, 1);
+  background-color: var(--main-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 
   @media screen and (min-width: 768px) {
     width: 618px;
