--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,20 +1,19 @@
-
 <footer class="footer-container">
-<div class="container">
-
-<div class="footer-content">
-<div class="footer-rights-information">
-<p class="footer-year"><span class="footer-copyright">©</span> 2020 </p>
-<p class="footer-rights-text">All Rights Reserved</p>
-    
-</div>
-  <div class="footer-about-information">
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-rights-information">
+        <p class="footer-year"><span class="footer-copyright">&#169</span> 2021</p>
+        <div class="footer-rights-information">
+          <p class="footer-rights-text">All Rights Reserved</p>
+        </div>
+       
+      </div>
+      <div class="footer-about-information">
         <p>Developed with</p>
-        <img class="footer-icon" src="./images/heard.svg" alt="heart"> 
+        <img class="footer-icon" src="./images/heard.svg" alt="heart" />
         <p>by</p>
         <a class="link-footer link" href="#">GoIT Students</a>
-        </div>
+      </div>
+    </div>
   </div>
-   
-</div>
 </footer>
