--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -26,7 +26,6 @@
 }
 .footer-about-information {
   display: flex;
-  flex-direction: column;
   text-align: center;
 }
 .link-footer {
@@ -46,20 +45,20 @@
   content: '';
   position: absolute;
   top: 0px;
-  left: 190px;
+  right: 0px;
 
-  height: 14px;
+  height: 100%;
   width: 1px;
 
   background-color: #545454;
 }
-.footer-year ::after {
+.footer-rights-text::before {
   content: '';
   position: absolute;
   top: 0px;
-  left: 56px;
+  left: 0px;
 
-  height: 14px;
+  height: 100%;
   width: 1px;
 
   background-color: #545454;
@@ -67,18 +66,17 @@
 .link-footer::after {
   content: '';
   position: absolute;
-  top: 15px;
+  bottom: 0px;
   left: 0px;
 
   height: 1px;
-  width: 90px;
+  width: 100%;
 
   background-color: #545454;
 }
 
 @media screen and (min-width: 320px) {
   .footer-about-information {
-    flex-direction: row;
     text-align: left;
   }
 }
@@ -102,24 +100,10 @@
     margin-bottom: 0px;
   }
   .footer-about-information {
-    margin-left: 10px;
+    margin-left: 6px;
   }
   .footer-container {
     font-size: 16px;
     line-height: 19px;
-  }
-  .footer-rights-text::after {
-    top: 2px;
-    left: 214px;
-    height: 16px;
-  }
-  .footer-year ::after {
-    top: 2px;
-    left: 64px;
-    height: 16px;
-  }
-  .link-footer::after {
-    top: 16px;
-    width: 100px;
   }
 }
