Добавляет сердце из спрайта

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,9 @@
       </div>
       <div class="footer-about-information">
         <p>Developed with</p>
-        <img class="footer-icon" src="./images/heard.svg" alt="heart" />
+          <svg class="footer-icon">
+                <use href="./images/sprite.svg#icon-heart"></use>
+            </svg>
         <p>by</p>
         <a class="link-footer link" href="#">GoIT Students</a>
       </div>
