--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,5 +36,6 @@
     </div>
   </div>
 
-  <a class="buttonScrollUp js-buttonScrollUp" title="Up">&#8682;</a> // buttonScrollUp
+  <!-- buttonScrollUp -->
+  <a class="buttonScrollUp js-buttonScrollUp" title="Up">&#8682;</a>
 </header>
