--- a/src/partials/modal-movie-card.html
+++ b/src/partials/modal-movie-card.html
@@ -1,3 +1,4 @@
+<div class="overlay">
 <div class="modal-wrapper">
     <div class="wrapper-img"><img class="img-modal" src="" alt="cover film"></div>
     <div class="modal-right-part">
@@ -35,4 +36,5 @@
         </div>
     </div>
 
+</div>
 </div>
