--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -2,51 +2,106 @@ p {
   margin: 0;
 }
 
-.modal-wrapper {
-  display: flex;
-  width: 882px;
-  height: 568px;
-  left: 71px;
-  top: 100px;
-  padding-top: 50px;
-  padding-bottom: 40px;
-  padding-right: 30px;
-  padding-left: 30px;
-
-  background: rgb(236, 193, 236);
+.overlay {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.modal-right-part {
-  padding-left: 30px;
+.modal-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-wrap: wrap;
+  height: 95%;
+  width: 100%;
+  max-width: 280px;
+  max-height: 958px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 41px;
+  padding-top: 48px;
+  background: rgb(236, 193, 236);
+  overflow: scroll;
+}
+
+@media screen and (min-width: 480px) {
+  .modal-wrapper {
+    max-width: 562px;
+    max-height: 618px;
+    padding-left: 28px;
+    padding-right: 30px;
+    padding-bottom: 7px;
+    padding-top: 75px;
+    flex-wrap: nowrap;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal-wrapper {
+    min-width: 882px;
+    min-height: 568px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal-right-part {
+    padding-left: 30px;
+    box-sizing: border-box;
+  }
 }
 
 .img-modal {
-  width: 396px;
-  height: 478px;
+  width: 240px;
+  height: 356px;
   left: 101px;
   top: 150px;
   border-radius: 5px;
 }
+@media screen and (min-width: 480px) {
+  .img-modal {
+    width: 264px;
+    height: 373px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .img-modal {
+    width: 396px;
+    height: 478px;
+  }
+}
 
 .modal-main-title {
   width: 266px;
-  height: 31px;
+  height: 21px;
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
-  font-size: 30px;
-  line-height: 35px;
+  font-size: 20px;
+  line-height: 23px;
   margin-bottom: 20px;
-
   color: #000000;
+}
+@media screen and (min-width: 768px) {
+  .modal-main-title {
+    height: 31px;
+    font-size: 30px;
+    line-height: 35px;
+  }
 }
 
 .modal-secondary-title {
   width: 39px;
   height: 16px;
-
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
@@ -56,15 +111,24 @@ p {
 }
 
 .modal-film-description {
-  width: 396px;
-  height: 160px;
-  font-family: Roboto;
-  font-style: normal;
+  // height: 240px;
+  width: 236px;
   font-weight: 500;
   font-size: 12px;
   line-height: 20px;
-
   color: #000000;
+}
+
+@media screen and (min-width: 480px) {
+  .modal-film-description {
+    // height: 264px;
+    width: 262px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-film-description {
+    width: 396px;
+  }
 }
 
 ////// списки с информацией: рейтинг, просмотры итд... //////
@@ -74,7 +138,12 @@ p {
 }
 
 .modal-list-denominations {
-  margin-right: 83px;
+  margin-right: 39px;
+}
+@media screen and (min-width: 768px) {
+  .modal-list-denominations {
+    margin-right: 83px;
+  }
 }
 
 .modal-item-position {
@@ -138,26 +207,39 @@ p {
 //////btn////
 .modal-wrapper-btn {
   margin-top: 21px;
+  display: flex;
 }
 
 .modal-btn {
-  font-family: Roboto;
-  font-style: normal;
+  box-sizing: border-box;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
-  width: 136px;
+  width: 113px;
   height: 44px;
   border-radius: 5px;
-  padding-top: 14px;
-  padding-bottom: 12px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   padding-left: 10px;
   padding-right: 10px;
   border: none;
 }
+@media screen and (min-width: 480px) {
+  .modal-btn {
+    width: 125px;
+    padding-top: 14px;
+    padding-bottom: 12px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-btn {
+    width: 136px;
+  }
+}
+
 .modal-btn-watched {
   background: #ff6b01;
   margin-right: 15px;
