--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,33 +1,41 @@
-<header class="header">
+<header class="header header-container_home">
     <div class="container">
         <nav class="header-nav">
-            <div class="">
-                <a class="logo link" href="">
-                    <img src="" alt="">
-                    <span class="logo-text">Filmoteka</span>
-                </a>
-                <ul class="navigation-menu-list list">
-                    <li class="navigation-list-link">
-                        <a class="link navigation-menu-link" href="../index.html">Home</a>
-                    </li>
-                    <li class="navigation-list-link">
-                        <a class="link navigation-menu-link" href="">My library</a>
-                    </li>
-                </ul>
-            </div>
+
+            <a class="logo link" href="">
+                <svg class="logo-icon">
+                    <use href=""></use>
+                </svg>
+                <span class="logo-text">Filmoteka</span>
+            </a>
+            <ul class="navigation-menu-list list">
+                <li class="navigation-list-link">
+                    <a class="link navigation-menu-link current" href="">Home</a>
+                </li>
+                <li class="navigation-list-link">
+                    <a class="link navigation-menu-link " href="">My library</a>
+                </li>
+            </ul>
+
         </nav>
-        <div class="search">
+        <div class="search ">
             <form class="search-form" id="search-form">
                 <input class="search-control" type="search" name="query" autocomplete="off"
                     placeholder="Search movies...">
                 <button class="search__btn" type="submit">
-                    <img src="" alt="">
+                    <svg class="search-icon">
+                        <use href=""></use>
+                    </svg>
                 </button>
+                <div class="warning is-hidden">Search result not successful. Enter the correct movie name and</div>
+                <!-- <p class="warning">Search result not successful. Enter the correct movie name and</p> -->
             </form>
+
         </div>
         <div class="buttons is-hidden">
-            <button class="btn_watched">Watched</button>
-            <button class="btn_queue">Queue</button>
+            <button class=" button btn_watched active-btn" type="button">Watched</button>
+            <button class=" button btn_queue " type="button">Queue</button>
         </div>
+
     </div>
 </header>
