--- a/src/partials/modal-movie-card.html
+++ b/src/partials/modal-movie-card.html
@@ -1,6 +1,6 @@
-<div class="overlay visually-hidden">
+<div class="overlay">
 <div class="modal-wrapper">
-    <div class="wrapper-img"><img class="img-modal" src="" alt="cover film"></div>
+    <div class="wrapper-img"><img class="img-modal" src="./images/demo.jpg" alt="cover film"></div>
     <div class="modal-right-part">
         <h2 class="modal-main-title">A FISTFUL OF LEAD</h2>
         <div class="modal-lists-wrapper">
