--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -26,7 +26,8 @@ p {
   padding-right: 20px;
   padding-bottom: 41px;
   padding-top: 48px;
-  background: rgb(236, 193, 236);
+  background-color: var(--main-white-color);
+  background-color: rgb(238, 162, 204);
   overflow: scroll;
 }
 
@@ -44,8 +45,8 @@ p {
 
 @media screen and (min-width: 768px) {
   .modal-wrapper {
-    min-width: 882px;
-    min-height: 568px;
+    max-width: 882px;
+    max-height: 568px;
     padding-top: 50px;
     padding-bottom: 40px;
     padding-right: 30px;
@@ -56,7 +57,6 @@ p {
 @media screen and (min-width: 480px) {
   .modal-right-part {
     padding-left: 30px;
-    box-sizing: border-box;
   }
 }
 
@@ -65,7 +65,7 @@ p {
   height: 356px;
   left: 101px;
   top: 150px;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 @media screen and (min-width: 480px) {
   .img-modal {
@@ -83,43 +83,40 @@ p {
 .modal-main-title {
   width: 266px;
   height: 21px;
-  font-weight: 500;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.15;
   margin-bottom: 20px;
-  color: #000000;
+  color: var(--main-black-color);
 }
 @media screen and (min-width: 768px) {
   .modal-main-title {
     height: 31px;
     font-size: 30px;
-    line-height: 35px;
+    line-height: 1.16;
   }
 }
 
 .modal-secondary-title {
   width: 39px;
   height: 16px;
-  font-weight: 500;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 1.33;
   text-transform: uppercase;
-  color: #000000;
+  color: var(--main-black-color);
   margin-bottom: 10px;
 }
 
 .modal-film-description {
-  // height: 240px;
-  width: 236px;
-  font-weight: 500;
+  max-width: 236px;
+  min-height: 264px;
+  font-weight: var(--text-bold);
   font-size: 12px;
-  line-height: 20px;
-  color: #000000;
+  line-height: 1.66;
+  color: var(--main-black-color);
 }
 
 @media screen and (min-width: 480px) {
   .modal-film-description {
-    // height: 264px;
     width: 262px;
   }
 }
@@ -135,7 +132,22 @@ p {
   margin-bottom: 20px;
 }
 
+.modal-item-position {
+  height: 16px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--modal-category-and-slash-color);
+}
+.modal-item-position:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .modal-list-denominations {
+  height: 16px;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--main-black-color);
   margin-right: 39px;
 }
 @media screen and (min-width: 768px) {
@@ -144,27 +156,10 @@ p {
   }
 }
 
-.modal-item-position {
+.modal-item-description {
   height: 16px;
-
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
   font-size: 12px;
-  line-height: 16px;
-  color: #8c8c8c;
-}
-.modal-item-position:not(:last-child) {
-  margin-bottom: 10px;
-}
-
-.modal-list-denominations {
-  height: 16px;
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 16px;
-  color: #000000;
+  line-height: 1.33;
 }
 
 .modal-item-description:not(:last-child) {
@@ -172,25 +167,23 @@ p {
 }
 
 .modal-item-description-rating {
-  line-height: 14px;
   padding-top: 1px;
   padding-bottom: 1px;
   width: 36px;
-  background: #ff6b01;
-  border-radius: 5px;
+  background: var(--main-active-color);
+  border-radius: var(--border-radius);
   text-align: center;
-  color: #ffffff;
+  color: var(--main-white-color);
   text-transform: uppercase;
 }
 
 .modal-item-description-views {
-  line-height: 14px;
   padding-top: 1px;
   padding-bottom: 1px;
   width: 36px;
   text-align: center;
-  background: #f7f7f7;
-  border-radius: 5px;
+  background: var(--for-pagination-footer-votes-background-color);
+  border-radius: var(--border-radius);
   text-transform: uppercase;
 }
 .modal-item-span {
@@ -212,10 +205,9 @@ p {
   box-sizing: border-box;
   font-weight: 500;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 1.33;
   text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
+  color: var(--main-white-color);
   width: 113px;
   height: 44px;
   border-radius: 5px;
@@ -224,6 +216,7 @@ p {
   padding-left: 10px;
   padding-right: 10px;
   border: none;
+  text-transform: var(--text-big-letters);
 }
 @media screen and (min-width: 480px) {
   .modal-btn {
@@ -239,12 +232,12 @@ p {
 }
 
 .modal-btn-watched {
-  background: #ff6b01;
+  background: var(--main-active-color);
   margin-right: 15px;
 }
 
 .modal-btn-queue {
-  color: #000000;
-  background-color: #fff;
-  border: 1px solid #000000;
+  color: var(--main-black-color);
+  background-color: var(--main-white-color);
+  border: 1px solid var(--main-black-color);
 }
