--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,16 +3,17 @@
     <nav class="header-nav">
       <a class="logo link" href="">
         <svg class="logo-icon">
-          <use href=""></use>
+          <use href="./images/sprite.svg#icon-film"></use>
         </svg>
         <span class="logo-text">Filmoteka</span>
       </a>
+
       <ul class="navigation-menu-list list">
         <li class="navigation-list-link">
-          <a class="link navigation-menu-link current" href="">Home</a>
+          <a class="link navigation-menu-link current" id="home_page" href="">Home</a>
         </li>
         <li class="navigation-list-link">
-          <a class="link navigation-menu-link " href="">My library</a>
+          <a class="link navigation-menu-link" id="lib_page" href="">My library</a>
         </li>
       </ul>
     </nav>
@@ -21,15 +22,16 @@
         <input class="search-control" type="search" name="query" autocomplete="off" placeholder="Search movies...">
         <button class="search__btn" type="submit">
           <svg class="search-icon">
-            <use href=""></use>
+            <use href="./images/sprite.svg#icon-search"></use>
           </svg>
         </button>
-        <div class="warning is-hidden">Search result not successful. Enter the correct movie name and</div>
+        <div class="warning visually-hidden">Search result not successful. Enter the correct movie name and</div>
         <!-- <p class="warning">Search result not successful. Enter the correct movie name and</p> -->
       </form>
+      <!-- <div class="warning ">Search result not successful. Enter the correct movie name and</div> -->
 
     </div>
-    <div class="buttons is-hidden">
+    <div class="buttons visually-hidden">
       <button class=" button btn_watched active-btn" type="button">Watched</button>
       <button class=" button btn_queue " type="button">Queue</button>
     </div>
