--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,16 @@
-.header-container_home {
+.header {
+  padding-top: 46px;
+  padding-bottom: 46px;
   height: 230px;
   margin: 0 auto;
+  @media screen and (min-width: 768px) {
+    padding-top: 41px;
+    padding-bottom: 41px;
+  }
+}
+.header-container_home {
+  // height: 230px;
+  // margin: 0 auto;
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url('../images/bg-images-main/mobile.jpg');
@@ -41,8 +51,8 @@
   }
 }
 .header-container_library {
-  height: 230px;
-  margin: 0 auto;
+  // height: 230px;
+  // margin: 0 auto;
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url('../images/bg-images-library/mobile.jpg');
   width: 100%;
@@ -84,30 +94,36 @@
 .logo-icon {
   width: 24px;
   height: 24px;
+  fill: var(--header-logo-svg-fill);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover &:focus {
+    fill: var(--secondary-active-color);
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 10px;
+  }
 }
 .search-icon {
   width: 12px;
   height: 12px;
 }
-
 .header-nav {
   display: flex;
   justify-content: space-between;
   margin-bottom: 37px;
-  align-items: baseline;
-  padding-top: 44px;
+  align-items: center;
+
+  //padding-top: 46px;
   @media screen and (min-width: 768px) {
-    padding-top: 41px;
+    //   padding-top: 41px;
   }
 }
 .logo-text {
-  font-family: var(--text-main);
-  font-weight: 500;
-  font-size: 30px;
+  // font-family: var(--text-main);
+  font-weight: var(--text-bold);
+  font-size: var(--logo-text-size-and-modal-header);
   line-height: 1.16px;
-  margin-bottom: 37px;
-  // padding-top: 41px;
-  color: #fff;
+  color: var(--main-white-color);
   @media screen and (max-width: 767px) {
     display: none;
   }
@@ -120,25 +136,25 @@
 }
 .navigation-menu-link {
   position: relative;
-  font-family: var(--text-main);
-  font-weight: 500;
-  font-size: 12px;
+  // font-family: var(--text-main);
+  font-weight: var(--text-bold);
+  font-size: var(--main-text-size);
   line-height: 1.16px;
   display: flex;
   align-items: center;
   text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
+  text-transform: var(--text-big-letters);
+  color: var(--main-white-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -8px;
+  bottom: -9px;
   width: 100%;
   height: 3px;
-  background: #ff6b08;
+  background: var(--secondary-active-color);
 }
 .search {
   max-width: 100%;
@@ -149,99 +165,105 @@
 .search-control {
   display: flex;
   align-items: center;
-  background-color: transparent;
+  background-color: var(--background-transparent-color);
   border: none;
   width: 280px;
   height: 20px;
   outline: none;
-  font-family: var(--text-main);
-  font-weight: 400;
-  font-size: 14px;
+  // font-family: var(--text-main);
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
   line-height: 1.14;
-  padding-bottom: 2px;
-  padding-right: 30px;
-  color: #fff;
-  border-bottom: 0.5px solid #ffffff;
+  padding-bottom: 4px;
+  padding-left: 4px;
+  //padding-right: 8px;
+  color: var(--main-white-color);
+  border-bottom: 0.5px solid var(--main-white-color);
   @media screen and (min-width: 768px) {
     width: 336px;
   }
 }
 .search-control::placeholder {
-  font-family: var(--text-main);
-  font-weight: 400;
-  font-size: 14px;
+  // font-family: var(--text-main);
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
   line-height: 1.17;
   display: flex;
   align-items: center;
-  color: #fff;
+  color: var(--main-white-color);
 }
 .search-form {
   position: relative;
 }
 .search__btn {
   position: absolute;
-  top: -6px;
+  top: -3px;
   right: 0;
-  width: 24px;
-  height: 24px;
-  // background-color: transparent;
+  padding: 1px 5px;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
   border-radius: 50%;
   border: none;
   outline: none;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus {
-    outline: none;
-  }
-  &:hover {
-    background-color: red;
-  }
+  // &:focus {
+  //   outline: none;
+  // }
+  // &:hover {
+  //   background-color: var(--header-search-unsuccessful-color);
+  // }
 }
 .buttons {
   display: flex;
   justify-content: center;
-  // margin: 0 auto;
+  margin: 0 auto;
 }
 .button {
   width: 130px;
   height: 44px;
   filter: drop-shadow(0px 8px 43px rgba(255, 107, 1, 0.6));
   cursor: pointer;
-  font-family: var(--text-main);
-  font-weight: 500;
-  font-size: 12px;
+  // font-family: var(--text-main);
+  font-weight: var(--text-bold);
+  font-size: var(--main-text-size);
   line-height: 1.14;
-  text-transform: uppercase;
-  background-color: transparent;
-  border-radius: 5px;
-  border: 1px solid #ffffff;
+  text-transform: var(--text-big-letters);
+  background-color: var(--background-transparent-color);
+  border-radius: var(--border-radius);
+  border: 1px solid var(--main-white-color);
   outline: none;
-  color: #ffffff;
+  color: var(--main-white-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus {
-    background-color: #ff6b01;
-    border-color: #ff6b01;
+  &:focus &:hover {
+    background-color: var(--main-active-color);
+    border-color: var(--main-active-color);
   }
   @media screen and (min-width: 768px) {
     width: 136px;
   }
 }
+.active-btn {
+  background-color: var(--main-active-color);
+  border-color: var(--main-active-color);
+}
 .button:not(:last-child) {
   margin-right: 18px;
 }
 .warning {
-  font-family: var(--text-main);
-  font-weight: 400;
-  font-size: 14px;
+  // font-family: var(--text-main);
+  font-weight: var(--text-normal);
+  font-size: var(--search-and-footer-mobile-text-size);
   line-height: 1.14;
   display: flex;
+  justify-content: center;
   align-items: center;
-  color: #ff001b;
+  color: var(--header-search-unsuccessful-color);
   position: absolute;
   margin-top: 22px;
   width: 280px;
-  bottom: 50px;
-  padding-bottom: 42px;
+
   @media screen and (min-width: 768px) {
     width: 390px;
   }
