add btn and hbs

--- a/src/partials/modal-movie-card.html
+++ b/src/partials/modal-movie-card.html
@@ -31,8 +31,12 @@
             they’ve
             been double crossed – but by who and how?</p>
         <div class="modal-wrapper-btn">
-            <button class="modal-btn modal-btn-watched" type="button">add to Watched</button>
-            <button class="modal-btn modal-btn-queue" type="button">add to queue</button>
+            
+                    <button class=" modal-btn modal-btn-hidden modal-btn-remove-watched" type="button">remove from Watched</button>
+                    <button class="visually-hidden modal-btn modal-btn-watched " type="button">add to Watched</button>
+                    <button class="modal-btn modal-btn-queue" type="button">add to queue</button>
+                    <button class="visually-hidden modal-btn modal-btn-hidden modal-btn-remove-queue" type="button">remove from queue</button>
+            
         </div>
     </div>
 
