--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -1,7 +1,3 @@
-p {
-  margin: 0;
-}
-
 .overlay {
   position: fixed;
   background: rgba(0, 0, 0, 0.2);
@@ -28,7 +24,7 @@ p {
   padding-top: 48px;
   background-color: var(--main-white-color);
   background-color: rgb(238, 162, 204);
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 @media screen and (min-width: 480px) {
@@ -107,8 +103,7 @@ p {
 }
 
 .modal-film-description {
-  max-width: 236px;
-  min-height: 264px;
+  width: 236px;
   font-weight: var(--text-bold);
   font-size: 12px;
   line-height: 1.66;
@@ -122,6 +117,7 @@ p {
 }
 @media screen and (min-width: 768px) {
   .modal-film-description {
+    height: 186px;
     width: 396px;
   }
 }
@@ -169,6 +165,8 @@ p {
 .modal-item-description-rating {
   padding-top: 1px;
   padding-bottom: 1px;
+  padding-left: 9px;
+  padding-right: 9px;
   width: 36px;
   background: var(--main-active-color);
   border-radius: var(--border-radius);
@@ -180,6 +178,8 @@ p {
 .modal-item-description-views {
   padding-top: 1px;
   padding-bottom: 1px;
+  padding-left: 4px;
+  padding-right: 4px;
   width: 36px;
   text-align: center;
   background: var(--for-pagination-footer-votes-background-color);
@@ -195,8 +195,18 @@ p {
   display: flex;
 }
 
+.modal-list-genres {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.modal-item-genres:not(:last-child) {
+  margin-right: 10px;
+}
+
 //////btn////
 .modal-wrapper-btn {
+  position: relative;
   margin-top: 21px;
   display: flex;
 }
@@ -232,12 +242,45 @@ p {
 }
 
 .modal-btn-watched {
-  background: var(--main-active-color);
+  color: var(--main-black-color);
+  background-color: var(--main-white-color);
+  border: 1px solid var(--main-black-color);
   margin-right: 15px;
+}
+
+.modal-btn-watched:hover {
+  color: var(--main-white-color);
+  background-color: var(--main-active-color);
+  border: none;
 }
 
 .modal-btn-queue {
   color: var(--main-black-color);
   background-color: var(--main-white-color);
   border: 1px solid var(--main-black-color);
+}
+.modal-btn-queue:hover {
+  color: var(--main-white-color);
+  background-color: var(--main-active-color);
+  border: none;
+}
+
+///btn hidden///
+
+.modal-btn-hidden {
+  display: flex;
+  align-items: center;
+  color: var(--main-white-color);
+  background-color: var(--main-active-color);
+  border: none;
+}
+
+.modal-btn-hidden:hover {
+  color: var(--main-black-color);
+  background-color: var(--main-white-color);
+  border: 1px solid var(--main-black-color);
+}
+
+.modal-btn-remove-watched {
+  margin-right: 15px;
 }
