--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,17 +19,14 @@
     </nav>
     <div class="search ">
       <form class="search-form" id="search-form">
-        <input class="search-control" type="search" name="query" autocomplete="off" placeholder="Search movies...">
+        <input class="search-control" type="text" name="query" autocomplete="off" placeholder="Search movies...">
         <button class="search__btn" type="submit">
           <svg class="search-icon">
             <use href="./images/sprite.svg#icon-search"></use>
           </svg>
         </button>
         <div class="warning visually-hidden">Search result not successful. Enter the correct movie name and</div>
-        <!-- <p class="warning">Search result not successful. Enter the correct movie name and</p> -->
       </form>
-      <!-- <div class="warning ">Search result not successful. Enter the correct movie name and</div> -->
-
     </div>
     <div class="buttons visually-hidden">
       <button class=" button btn_watched active-btn" type="button">Watched</button>
