--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -3,3 +3,5 @@
 @import './backdrop';
 /* === Modal close button style === */
 @import './modal-close-btn';
+/* === Button === */
+@import './button';
