--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -117,6 +117,10 @@ body {
 /* === Header library section styles === */
 /* === Footer section styles === */
 .footer-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: var(--for-pagination-footer-votes-background-color);
   padding-top: 29px;
   padding-bottom: 30px;
@@ -386,9 +390,8 @@ body {
   top: 0px;
   right: -3px;
   height: 100%;
-  width: 2px;
+  width: 1px;
   background-color: var(--secondary-active-color);
-  opacity: 0.4;
 }
 
 .moviе-year {
@@ -418,6 +421,43 @@ body {
 }
 
 /* === Components === */
+.buttonScrollUp {
+  position: fixed;
+  bottom: 80px;
+  right: 40px;
+  z-index: 9999;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  background: #f5f5f5;
+  color: var(--secondary-active-color);
+  cursor: pointer;
+  border-radius: 50%;
+  display: none;
+}
+
+.buttonScrollUp:hover {
+  color: var(--main-white-color);
+  background: var(--secondary-active-color);
+}
+
+.buttonScrollUp--show {
+  display: block;
+}
+
+.test {
+  background-color: #8b4848;
+  width: 100px;
+  height: 500px;
+}
+
+.test2 {
+  background-color: #4c488b;
+  width: 100px;
+  height: 500px;
+}
+
 /* === backdrop styles === */
 .backdrop {
   position: fixed;
@@ -486,6 +526,10 @@ body {
 }
 
 .footer-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: var(--for-pagination-footer-votes-background-color);
   padding-top: 29px;
   padding-bottom: 30px;
@@ -621,6 +665,85 @@ body {
   .footer-container {
     font-size: 16px;
     line-height: 19px;
+  }
+}
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 999;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  opacity: 0.8;
+  visibility: visible;
+}
+
+.loader {
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  border: 12px solid white;
+  border-radius: 50%;
+  border-top-color: var(--secondary-active-color);
+  border-bottom-color: var(--secondary-active-color);
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: 1s spin infinite linear;
+          animation: 1s spin infinite linear;
+}
+
+.preloader-js {
+  opacity: 0;
+  visibility: hidden;
+}
+
+@-webkit-keyframes spin {
+  from {
+    -webkit-transform: translate(-50%, -50%) rotate(0deg);
+            transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, -50%) rotate(360deg);
+            transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  from {
+    -webkit-transform: translate(-50%, -50%) rotate(0deg);
+            transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, -50%) rotate(360deg);
+            transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .loader {
+    position: absolute;
+    width: 85px;
+    height: 85px;
+    border: 14px solid white;
+    border-top-color: var(--secondary-active-color);
+    border-bottom-color: var(--secondary-active-color);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .loader {
+    position: absolute;
+    width: 95px;
+    height: 95px;
+    border: 15px solid white;
+    border-top-color: var(--secondary-active-color);
+    border-bottom-color: var(--secondary-active-color);
   }
 }
 /*# sourceMappingURL=main.css.map */
