--- a/src/templates/movieCardTemplate.hbs
+++ b/src/templates/movieCardTemplate.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<li class="gallery-items">
+<li class="gallery-items" data-index="{{id}}">
       <div class="moviе-item__img">
             <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="moviе poster: {{title}}">
       </div>
