--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,21 +17,28 @@
         </li>
       </ul>
     </nav>
-    <div class="search ">
+    <div class="search">
       <form class="search-form" id="search-form">
-        <input class="search-control" type="text" name="query" autocomplete="off" placeholder="Search movies...">
+        <input
+          class="search-control"
+          type="text"
+          name="query"
+          autocomplete="off"
+          placeholder="Search movies..."
+        />
         <button class="search__btn" type="submit">
           <svg class="search-icon">
             <use href="./images/sprite.svg#icon-search"></use>
           </svg>
         </button>
-        <div class="warning visually-hidden">Search result not successful. Enter the correct movie name and</div>
+        <div class="warning visually-hidden">
+          Search result not successful. Enter the correct movie name and
+        </div>
       </form>
     </div>
     <div class="buttons visually-hidden">
-      <button class=" button btn_watched active-btn" type="button">Watched</button>
-      <button class=" button btn_queue " type="button">Queue</button>
+      <button class="button btn_watched active-btn" type="button">Watched</button>
+      <button class="button btn_queue" type="button">Queue</button>
     </div>
-
   </div>
 </header>
