--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer-container {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
   width: 100%;
   background-color: var(--for-pagination-footer-votes-background-color);
   padding-top: 29px;
@@ -90,6 +90,11 @@
 }
 
 @media screen and (min-width: 320px) {
+  .footer-container {
+    height: 100px;
+    margin-top: -100px;
+  }
+
   .footer-about-information {
     text-align: left;
   }
@@ -97,22 +102,26 @@
 
 @media screen and (min-width: 768px) {
   .footer-container {
+    height: 77px;
+    margin-top: -77px;
     padding-top: 30px;
     padding-bottom: 28px;
+
+    font-size: 16px;
+    line-height: 19px;
   }
+
   .footer-content {
     flex-direction: row;
     align-items: center;
     justify-content: center;
   }
+
   .footer-rights-information {
     margin-bottom: 0px;
   }
+
   .footer-about-information {
     margin-left: 6px;
-  }
-  .footer-container {
-    font-size: 16px;
-    line-height: 19px;
   }
 }
