create js-classes for refs-object

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,7 +14,7 @@
                 <use href="./images/sprite.svg#icon-heart"></use>
             </svg>
         <p>by</p>
-        <a class="link-footer link" href="#">GoIT Students</a>
+        <a class="link-footer link js-link-footer" href="#">GoIT Students</a>
       </div>
     </div>
   </div>
