--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden backdrop-js">
+<div class="backdrop is-hidden js-backdrop">
   <div class="modal">
     <button type="button" class="modal-close-btn js-close-btn">
       <svg class="modal-close-btn__icon" width="14" height="14">
