--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
       </ul>
     </nav>
     <div class="search">
-      <form class="search-form" id="search-form">
+      <form class="search-form js-search-form">
         <input
           class="search-control js-search-control"
           type="text"
