added search, but refs are needed

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
     </nav>
     <div class="search ">
       <form class="search-form" id="search-form">
-        <input class="search-control" type="text" name="query" autocomplete="off" placeholder="Search movies...">
+        <input class="search-control js-search-control" type="text" name="query" autocomplete="off" placeholder="Search movies...">
         <button class="search__btn" type="submit">
           <svg class="search-icon">
             <use href="./images/sprite.svg#icon-search"></use>
