--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,8 +1,9 @@
 .footer-container {
-  // position: absolute;
-  // bottom: 0;
-  // left: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
+
   background-color: var(--for-pagination-footer-votes-background-color);
   padding-top: 29px;
   padding-bottom: 30px;
@@ -90,10 +91,10 @@
 }
 
 @media screen and (min-width: 320px) {
-  .footer-container {
-    height: 100px;
-    margin-top: -100px;
-  }
+  // .footer-container {
+  //   height: 100px;
+  //   margin-top: -100px;
+  // }
 
   .footer-about-information {
     text-align: left;
@@ -102,8 +103,8 @@
 
 @media screen and (min-width: 768px) {
   .footer-container {
-    height: 77px;
-    margin-top: -77px;
+    // height: 77px;
+    // margin-top: -77px;
     padding-top: 30px;
     padding-bottom: 28px;
 
