--- a/src/partials/modal-movie-card.html
+++ b/src/partials/modal-movie-card.html
@@ -1,6 +1,6 @@
-<div class="overlay visually-hidden">
+<div class="overlay">
 <div class="modal-wrapper">
-    <div class="wrapper-img"><img class="img-modal" src="./images/demo.jpg" alt="cover film"></div>
+    <!-- <div class="wrapper-img"><img class="img-modal" src="./images/demo.jpg" alt="cover film"></div>
     <div class="modal-right-part">
         <h2 class="modal-main-title">A FISTFUL OF LEAD</h2>
         <div class="modal-lists-wrapper">
@@ -38,7 +38,7 @@
                     <button class="visually-hidden modal-btn modal-btn-hidden modal-btn-remove-queue" type="button">remove from queue</button>
             
         </div>
-    </div>
+    </div> -->
 
 </div>
 </div>
