added switch color buttons and menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header header-container_home">
+<header class="header header-container_home ">
   <div class="container">
     <nav class="header-nav">
       <a class="logo link" href="">
@@ -10,10 +10,10 @@
 
       <ul class="navigation-menu-list list">
         <li class="navigation-list-link">
-          <a class="link navigation-menu-link current" id="home_page" href="">Home</a>
+          <a class="link navigation-menu-link current home-page" id="" href="">Home</a>
         </li>
         <li class="navigation-list-link">
-          <a class="link navigation-menu-link" id="lib_page" href="">My library</a>
+          <a class="link navigation-menu-link lib-page" id="" href="">My library</a>
         </li>
       </ul>
     </nav>
