--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -126,26 +126,25 @@
   position: relative;
   font-size: var(--main-text-size);
   line-height: 1.16px;
+  height: 14px;
   display: flex;
   align-items: center;
   text-align: center;
   text-transform: var(--text-big-letters);
   color: var(--main-white-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -9px;
+  bottom: -3px;
   width: 100%;
   height: 3px;
-  background: var(--secondary-active-color);
-}
-.navigation-menu-link:hover,
-.navigation-menu-link:focus {
   background-color: var(--secondary-active-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .search {
   max-width: 100%;
   display: flex;
