--- a/src/templates/movieCardTemplate.hbs
+++ b/src/templates/movieCardTemplate.hbs
@@ -15,9 +15,9 @@
             {{/if}}
             <div class="moviе-stats__info">
                   <ul class="moviе-genre">
-                        {{#each genre_ids}}
-                        <li class="moviе-genre__item">{{this}}</li>
-                        {{/each}}
+                        
+                        <li class="moviе-genre__item">{{genres_short_list}}</li>
+                        
                   </ul>
                   <p class="moviе-year">
                         {{#if release_date}}
