--- a/src/templates/aboutMovieTemplates.hbs
+++ b/src/templates/aboutMovieTemplates.hbs
@@ -1,3 +1,4 @@
+<div class="modal-wrapper"> 
 <div class="wrapper-img"><img class="img-modal" src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="cover film">
 </div>
 <div class="modal-right-part">
@@ -35,4 +36,5 @@
          <button class="modal-btn modal-btn-queue" type="button">add to queue</button>
        <button class="visually-hidden modal-btn modal-btn-hidden modal-btn-remove-queue" type="button">remove fromqueue</button>
     </div>
+</div>
 </div>
