--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
 <div class="backdrop is-hidden js-backdrop">
-  <div class="modal">
+  <div class="modal js-modal">
     <button type="button" class="modal-close-btn js-close-btn">
       <svg class="modal-close-btn__icon" width="14" height="14">
         <use href="./images/sprite.svg#icon-close"></use>
