added coomon style to button

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -25,6 +25,9 @@ body {
   color: var(--color-design-main);
   font-weight: var(--text-bold);
 }
+button {
+  cursor: pointer;
+}
 
 .wrapper {
   // box-sizing: border-box;
