cleaned and fixed header.js

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,8 +34,8 @@
       </form>
     </div>
     <div class="buttons visually-hidden">
-      <button class="button btn_watched active-btn js-btn_watched" type="button">Watched</button>
-      <button class="button btn_queue js-btn_queue" type="button">Queue</button>
+      <button class="button_lib btn_watched active-btn js-btn_watched" type="button">Watched</button>
+      <button class="button_lib btn_queue js-btn_queue" type="button">Queue</button>
     </div>
   </div>
 </header>
