--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,9 @@
-.button {
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+.button_lib {
   width: 130px;
   height: 44px;
   filter: drop-shadow(0px 8px 43px rgba(255, 107, 1, 0.6));
@@ -20,6 +25,9 @@
   @media screen and (min-width: 768px) {
     width: 136px;
   }
+}
+.button_lib:not(:last-child) {
+  margin-right: 18px;
 }
 .active-btn {
   background-color: var(--main-active-color);
