--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -91,7 +91,8 @@
   height: 24px;
   fill: var(--header-logo-svg-fill);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover &:focus {
+  &:hover,
+  &:focus {
     fill: var(--secondary-active-color);
   }
   @media screen and (min-width: 768px) {
@@ -133,6 +134,10 @@
   text-transform: var(--text-big-letters);
   color: var(--main-white-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--main-active-color);
+  }
 }
 .current::after {
   content: '';
@@ -157,7 +162,7 @@
   background-color: var(--background-transparent-color);
   border: none;
   width: 280px;
-  height: 20px;
+  height: 24px;
   outline: none;
   font-weight: var(--text-normal);
   font-size: var(--search-and-footer-mobile-text-size);
@@ -184,7 +189,7 @@
 }
 .search__btn {
   position: absolute;
-  top: -3px;
+  top: 0;
   right: 0;
   padding: 1px 5px;
   width: 20px;
@@ -195,15 +200,7 @@
   outline: none;
   cursor: pointer;
 }
-.buttons {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-}
 
-.button:not(:last-child) {
-  margin-right: 18px;
-}
 .warning {
   font-weight: var(--text-normal);
   font-size: var(--search-and-footer-mobile-text-size);
