--- a/src/templates/aboutMovieTemplates.hbs
+++ b/src/templates/aboutMovieTemplates.hbs
@@ -1,6 +1,12 @@
 <div class="modal-wrapper"> 
-<div class="wrapper-img"><img class="img-modal" src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="cover film">
+    <a class="modal-wrapper-link" href="">
+<div class="wrapper-img">
+    <img class="img-modal" src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="cover film">
+    <div class="overlay">
+        {{!-- <img src="../images/play.png" alt=""> --}}
+    </div>
 </div>
+</a>
 <div class="modal-right-part">
     <h2 class="modal-main-title">{{original_title}}</h2>
     <div class="modal-lists-wrapper">
