--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -14,11 +14,6 @@
 @media screen and (min-width: 1024px) {
   .modal-wrapper {
     max-width: 882px;
-    // max-height: 568px;
-    // padding-top: 50px;
-    // padding-bottom: 40px;
-    // padding-right: 30px;
-    // padding-left: 30px;
   }
 }
 
@@ -43,7 +38,9 @@
 }
 
 .wrapper-img {
+  position: relative;
   border-radius: var(--border-radius);
+  overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
@@ -292,4 +289,21 @@
 
 .modal-btn-remove-watched {
   margin-right: 15px;
+}
+
+//////overlay/////@at-root
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: inherit;
+  height: inherit;
+  background: rgba(238, 108, 22, 0.699);
+
+  transform: translateY(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-wrapper-link:hover .overlay,
+.modal-wrapper-link:focus .overlay {
+  transform: translate(0);
 }
