added dataset to buttons

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,10 +36,16 @@
       </form>
     </div>
     <div class="buttons js-buttons visually-hidden">
-      <button class="button_lib btn_watched active-btn js-btn_watched" type="button">
+      <button
+        class="button_lib btn_watched active-btn js-btn_watched"
+        data-libType="watched"
+        type="button"
+      >
         Watched
       </button>
-      <button class="button_lib btn_queue js-btn_queue" type="button">Queue</button>
+      <button class="button_lib btn_queue js-btn_queue" type="button" data-libType="queue">
+        Queue
+      </button>
     </div>
   </div>
 </header>
