fix_modal-movies_scss

--- a/src/sass/layout/_modal-movie.scss
+++ b/src/sass/layout/_modal-movie.scss
@@ -59,7 +59,7 @@
 }
 
 .modal-main-title {
-  height: 21px;
+  // height: 21px;
   font-size: 20px;
   line-height: 1.15;
   margin-bottom: 20px;
@@ -67,7 +67,7 @@
 }
 @media screen and (min-width: 1024px) {
   .modal-main-title {
-    height: 31px;
+    // height: 31px;
     font-size: 30px;
     line-height: 1.16;
   }
@@ -75,7 +75,7 @@
 
 .modal-secondary-title {
   width: 39px;
-  height: 16px;
+  // height: 16px;
   font-size: 12px;
   line-height: 1.33;
   text-transform: uppercase;
@@ -141,7 +141,7 @@
 }
 
 .modal-item-description {
-  height: 16px;
+  // height: 16px;
   font-size: 12px;
   line-height: 1.33;
 }
